# cmake_hip_mpi_example

./: CMakeLists.txt  README.md  build_script.sh  env.h
src/cpp/: CMakeLists.txt  test_lib.cpp  test_lib.h
src/f90/: CMakeLists.txt  test_lib.f90
src/hip/: CMakeLists.txt  kernel.h  kernel.hip
test/: CMakeLists.txt  test.cpp  test.f90
